fix overflow bug

--- a/src/pages/Pages.css
+++ b/src/pages/Pages.css
@@ -54,6 +54,7 @@
     width: 2013px;
     height: 172px;
     margin-left: -1007px;
+    overflow-y: hidden;
 }
 
 .header {
